--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://pbs.twimg.com/profile_images/755505155768983552/7RYuyRBT_400x400.jpg
+avatar: http://home.rlmx.tech/rlmxorg-logos_transparent.png
 
 # boolean type, the global switch for ToC in posts.
 toc: true
